test/regress/regress-12.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func)
)

(func))
(;; STDERR ;;;
out/test/regress/regress-12.txt:7:1: error: unexpected token (, expected EOF.
(func))
^
;;; STDERR ;;)
